<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40sp"
        android:layout_marginTop="80sp"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="80sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/appName"
            android:textColor="@color/blue"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/explanation"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/explanation"
            android:textColor="@color/blue"
            android:textSize="28sp" />

        <Button
            android:id="@+id/startTest"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/startTest"
            android:textColor="@color/white"
            android:textColorLink="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/achievements"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/achievements"
            android:textColor="@color/white"
            android:textColorLink="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textColorLink="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>