<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <Button
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/answer1"
            android:textColor="@color/white"
            android:textColorLink="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/answer2"
            android:textColor="@color/white"
            android:textColorLink="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/answer3"
            android:textColor="@color/white"
            android:textColorLink="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/answer4"
            android:textColor="@color/white"
            android:textColorLink="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>