<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswerActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/decision"
            android:layout_width="match_parent"
            android:layout_height="487dp"
            android:layout_marginBottom="10sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/decision"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rightAnswerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/rounded_corner_orange"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/rightAnswerTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rightAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/rightAnswer"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner_blue"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/endTest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5sp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/endTest"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/farther"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5sp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/farther"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>