<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AchievementActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/achievementsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/achievements"
            android:textColor="@color/orange"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seriesTestTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/seriesTestTitle"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seriesTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@color/orange"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/percentageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/percentageTitle"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@color/orange"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/back"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>